--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,9 @@ bcrypt = "^4.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
+pyright = "^1.1.375"
+pytest = "^8.3.2"
+pytest-asyncio = "^0.23.8"
 
 [tool.black]
 line-length = 120
