--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -1,9 +1,11 @@
 {
   "name": "grunge-football-predictions",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
