--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "grunge-football-predictions",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "axios": "^1.7.3",
@@ -8,7 +9,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "serve": "^14.2.0"
   },
