--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
