fixes after tests

--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grunge-football-predictions",
+  "name": "football-predictions",
   "version": "0.1.0",
   "homepage": ".",
   "private": true,
