--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ alembic = "^1.7.0"
 psycopg2-binary = "^2.9.1"
 email-validator = "^2.2.0"
 bcrypt = "^4.2.0"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
