--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "serve": "^14.2.0"
