--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ psycopg2-binary = "^2.9.1"
 email-validator = "^2.2.0"
 bcrypt = "^4.2.0"
 python-dotenv = "^1.0.1"
+fastapi-mail = "^1.4.1"
 
 
 [tool.poetry.group.dev.dependencies]
