--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ email-validator = "^2.2.0"
 bcrypt = "^4.2.0"
 python-dotenv = "^1.0.1"
 fastapi-mail = "^1.4.1"
+python-telegram-bot = "^21.4"
 
 
 [tool.poetry.group.dev.dependencies]
