--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ python-telegram-bot = "^21.4"
 pyyaml = "^6.0.2"
 apscheduler = "^3.10.4"
 httpx = "^0.27.0"
+setuptools = "^74.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
