--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,8 @@ pyyaml = "^6.0.2"
 apscheduler = "^3.10.4"
 httpx = "^0.27.0"
 setuptools = "^74.0.0"
+anthropic = "^0.34.2"
+openai = "^1.44.0"
 
 
 [tool.poetry.group.dev.dependencies]
